[project]
name = "tag-relay"
version = "0.1.0"
description = "Doover processor that relays tag values between apps, with optional CEL transforms and an optional per-mapping UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=1.0.0a8",
    "common-expression-language>=0.5.0",
    # common-expression-language's CLI module imports typing_extensions but
    # doesn't declare it. Pin it here so Lambda deploys don't blow up on import.
    "typing_extensions>=4.0",
]

[project.scripts]
export-config = "tag_relay.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tag_relay"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.uv.sources]
pydoover = { git = "https://github.com/getdoover/pydoover" }
